--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "libnpmpublish": "^2.0.0",
     "pacote": "^11.2.3",
     "ssri": "^8.0.1",
+    "targz": "^1.0.1",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
